[metadata]
package_name = QMix
description = Simulation software for SIS mixers
description-file = README.md
author = John D. Garrett
author_email = garrettj403@gmail.com
license = GPL v3
url = https://github.com/garrettj403/QMix
github_project = garrettj403/QMix
install_requires = matplotlib, numba, numpy, scipy
version = 1.0.5